@@ -1,5 +1,3 @@
-signature = [('self', 'string')]
-
 def execute(scope, filename):
     file = open(filename[0], 'w')
     file.close()
