@@ -1,5 +1,3 @@
-signature = [('self', 'string', 'list')]
-
 def execute(scope, filename, lines):
     file = open(filename[0], 'a')
     file.writelines(['%s\n' % line.rstrip() for line in lines])
